Buttons no longer move when clicked, added vertical align to css

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,7 @@
 button {
     width: 25px;
     height: 25px;
-    margin: 2px;
+    margin: 0;
+    padding: 0;
+    vertical-align: top;
 }
